--- a/printme.ipynb
+++ b/printme.ipynb
@@ -19,45 +19,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4046139281.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[5], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    name_dict = ('Name': 'Charles',\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Microsoft Windows [Version 10.0.26100.2314]\n",
+      "(c) Microsoft Corporation. All rights reserved.\n",
+      "\n",
+      "$[pat] c:\\Users\\pat_h\\OneDrive\\p-spohr-repos\\HTW-Berlin-Pytorium > py .\\runme.py\n",
+      "100\n",
+      "\n",
+      "$[pat] c:\\Users\\pat_h\\OneDrive\\p-spohr-repos\\HTW-Berlin-Pytorium > "
      ]
     }
    ],
    "source": [
-    "name_dict = ('Name': 'Charles',\n",
-    "             'Alter': 45)\n",
-    "\n",
-    "print(name_dict['Name'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'tuple' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
-     ]
-    }
-   ],
-   "source": [
-    "x = (1,0,3)\n",
-    "x[1] = 2"
+    "%%cmd\n",
+    "py .\\runme.py"
    ]
   },
   {
