--- a/2-Grundlegend/2.1-2.2-aufgaben-lösungen.ipynb
+++ b/2-Grundlegend/2.1-2.2-aufgaben-lösungen.ipynb
@@ -423,7 +423,7 @@
    "id": "7bd46be3-f52b-4e56-96fc-abf777fc8106",
    "metadata": {},
    "source": [
-    "## 2.4 Drucken Sie jede ungerade Zahl doppelt aus, die nicht ein Teiler von fünf ist."
+    "## 2.4 Drucken Sie jede ungerade Zahl quadriert aus, die nicht ein Teiler von fünf ist."
    ]
   },
   {
