update oop part and assignment

--- a/2-Grundlegend/Aufgaben/2.3-aufgaben.ipynb
+++ b/2-Grundlegend/Aufgaben/2.3-aufgaben.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Erweitern Sie die Funktion mit einer Farbe- und Muster-Parameter"
+    "### 2.2 Erweitern Sie die Funktion mit einer Farbe- und Muster-Parameter. Schreiben Sie eine Methode, um sie auszudrucken."
    ]
   },
   {
