add 4.1 and 4.2 tasks

--- a/2-Grundlegend/Aufgaben/2.1-2.2-aufgaben-lösungen.ipynb
+++ b/2-Grundlegend/Aufgaben/2.1-2.2-aufgaben-lösungen.ipynb
@@ -5,10 +5,11 @@
    "id": "f974a023-1226-4d6e-82e8-bf69078d2e07",
    "metadata": {},
    "source": [
-    "2.1 - 2.2 Aufgaben\n",
+    "# 2.1 - 2.2 Aufgaben\n",
     "\n",
     "Diese Aufgaben sind länger als Lernzielkontrolle und fassen alle Themen aus 2.1 und 2.2 zusammen.\n",
-    "Lösen Sie diese Aufgabe in VS Code oder in Jupyter Notebook."
+    "\n",
+    "Lösen Sie diese Aufgaben in VS Code oder in Jupyter Notebook."
    ]
   },
   {
@@ -16,7 +17,7 @@
    "id": "51431c53-d112-4ac7-98a7-1f51108c4516",
    "metadata": {},
    "source": [
-    "# Aufgabe 1"
+    "## Aufgabe 1"
    ]
   },
   {
@@ -24,12 +25,12 @@
    "id": "ede50ef0-9e28-41d9-b201-0cd513924bdd",
    "metadata": {},
    "source": [
-    "## 1.1 Initialisieren Sie eine Liste mit fünf Namen"
+    "### 1.1 Initialisieren Sie eine Liste mit fünf Namen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "8f4d2ec9-2ca5-4ab5-b44a-d63bf7613f61",
    "metadata": {},
    "outputs": [],
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "fb8f2061-42b1-48bf-a5f4-609cef27ec82",
    "metadata": {},
    "outputs": [
@@ -49,7 +50,7 @@
        "['Tim', 'Nina', 'Sara', 'Alexander', 'Katja']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,12 +64,12 @@
    "id": "9b279a09-520a-4f9f-a11d-0d4a9cd731a4",
    "metadata": {},
    "source": [
-    "## 1.2 Fügen Sie noch einen Name der Liste hinzu."
+    "### 1.2 Fügen Sie noch einen Name der Liste hinzu."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 12,
    "id": "6912e505-4957-442c-a11c-80e3de9902fc",
    "metadata": {},
    "outputs": [],
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 13,
    "id": "2c0dcc1f-b9f7-4e51-ae75-0e1e028b0f76",
    "metadata": {},
    "outputs": [
@@ -88,7 +89,7 @@
        "['Tim', 'Nina', 'Sara', 'Alexander', 'Katja', 'John']"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,12 +103,12 @@
    "id": "dbbdbe73-9e70-460e-aaca-53df80ba0b6e",
    "metadata": {},
    "source": [
-    "## 1.3 Drucken Sie jede Name aus."
+    "### 1.3 Drucken Sie jede Name aus."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "9164bbe1-caea-4c72-95c5-25eedd7bd663",
    "metadata": {},
    "outputs": [
@@ -119,7 +120,8 @@
       "Nina\n",
       "Sara\n",
       "Alexander\n",
-      "Katja\n"
+      "Katja\n",
+      "John\n"
      ]
     }
    ],
@@ -133,12 +135,12 @@
    "id": "2cbc79e3-96ae-48eb-b8aa-c721ea3f70e2",
    "metadata": {},
    "source": [
-    "## 1.4 Drucken Sie die erste Buchstabe von jede Name aus."
+    "### 1.4 Drucken Sie die erste Buchstabe von jede Name aus."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "16157934-e52f-4134-bcf6-73082915eed4",
    "metadata": {},
    "outputs": [
@@ -150,7 +152,8 @@
       "N\n",
       "S\n",
       "A\n",
-      "K\n"
+      "K\n",
+      "J\n"
      ]
     }
    ],
@@ -164,12 +167,12 @@
    "id": "9328e814-4e7f-4d9e-bfd3-bc7654f3769a",
    "metadata": {},
    "source": [
-    "## 1.5 Speichern Sie jede Name als ungekehrt in einer neuen Liste und drucken Sie gleichzeitig jeden Name aus.\n"
+    "### 1.5 Speichern Sie jede Name als ungekehrt in einer neuen Liste und drucken Sie gleichzeitig jeden Name aus.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "5cd05459-606e-4185-aba9-3f3f8de56dc3",
    "metadata": {},
    "outputs": [
@@ -181,7 +184,8 @@
       "aniN\n",
       "araS\n",
       "rednaxelA\n",
-      "ajtaK\n"
+      "ajtaK\n",
+      "nhoJ\n"
      ]
     }
    ],
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "c5b725f6-3433-4e28-8b02-b554eae9a438",
    "metadata": {},
    "outputs": [
@@ -202,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['miT', 'aniN', 'araS', 'rednaxelA', 'ajtaK']\n"
+      "['miT', 'aniN', 'araS', 'rednaxelA', 'ajtaK', 'nhoJ']\n"
      ]
     }
    ],
@@ -215,12 +219,12 @@
    "id": "ef9a1925-85fe-4c6d-91f3-4eb5cbaeecf1",
    "metadata": {},
    "source": [
-    "## 1.6 Löschen Sie alle Elemente in der neuen ungekehrten Liste."
+    "### 1.6 Löschen Sie alle Elemente in der neuen ungekehrten Liste."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "838a94e2-a875-4301-a31c-1b3b58f312be",
    "metadata": {},
    "outputs": [
@@ -242,7 +246,7 @@
    "id": "37a708d8-ab2b-4549-ad04-7c131e52ad93",
    "metadata": {},
    "source": [
-    "# Aufgabe 2"
+    "## Aufgabe 2"
    ]
   },
   {
@@ -250,12 +254,12 @@
    "id": "5ce17b5b-c3a2-44e5-bd3c-2e3b1ae57245",
    "metadata": {},
    "source": [
-    "## 2.1 Initialisieren Sie eine Liste von 0 bis 50."
+    "### 2.1 Initialisieren Sie eine Liste von 0 bis 50."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "fcd90a07-e4b9-4a44-b8d0-d4ba851a55a7",
    "metadata": {},
    "outputs": [],
@@ -265,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 20,
    "id": "49baafc6-460b-4842-928f-f99ef04a2dc9",
    "metadata": {},
    "outputs": [
@@ -290,12 +294,12 @@
    "id": "ff7a9524-ea7b-43e5-8e54-485384c960d6",
    "metadata": {},
    "source": [
-    "## 2.2 Ordnen Sie die List von absteigend zu."
+    "### 2.2 Ordnen Sie die List von absteigend zu."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "b31cfd7b-bee7-44fb-971f-f5ec27832218",
    "metadata": {},
    "outputs": [],
@@ -305,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "142f28e0-dc40-48b9-9ca1-7dfa715b305e",
    "metadata": {},
    "outputs": [
@@ -328,12 +332,12 @@
    "id": "e71ef59e-ea30-4b8d-92e7-7059639a1b13",
    "metadata": {},
    "source": [
-    "## 2.3 Drucken Sie jede gerade Zahl aus, die nicht ein Teiler von zehn ist."
+    "### 2.3 Drucken Sie jede gerade Zahl aus, die nicht ein Teiler von zehn ist."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 23,
    "id": "d3d7cb2e-197a-465f-9ed2-ed9576a65ace",
    "metadata": {},
    "outputs": [],
@@ -343,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "b8f2afdf",
    "metadata": {},
    "outputs": [
@@ -361,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 25,
    "id": "675c8c84-9c1c-4140-aca3-4d8d680ccfb8",
    "metadata": {},
    "outputs": [
@@ -381,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "25005b79-1019-4344-ae9b-970254c347fd",
    "metadata": {},
    "outputs": [
@@ -423,12 +427,12 @@
    "id": "7bd46be3-f52b-4e56-96fc-abf777fc8106",
    "metadata": {},
    "source": [
-    "## 2.4 Drucken Sie jede ungerade Zahl quadriert aus, die nicht ein Teiler von fünf ist."
+    "### 2.4 Drucken Sie jede ungerade Zahl quadriert aus, die nicht ein Teiler von fünf ist."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "b62d4651-8acf-48d6-81fb-040dc24709bf",
    "metadata": {},
    "outputs": [
@@ -470,7 +474,7 @@
    "id": "8c7f124e-f015-41ca-927f-4fd5a193edbf",
    "metadata": {},
    "source": [
-    "# Aufgabe 3 "
+    "## Aufgabe 3 "
    ]
   },
   {
@@ -478,12 +482,12 @@
    "id": "ad6a6528-e11e-47b1-b423-11685a5b4d6c",
    "metadata": {},
    "source": [
-    "## 3.1 Initialisieren Sie eine Liste von 0 bis 1 mit 0.01 Schrittgröße   "
+    "### 3.1 Initialisieren Sie eine Liste von 0 bis 1 mit 0.01 Schrittgröße   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "edf17e3d-fece-4fea-85f0-5f0acdc695eb",
    "metadata": {},
    "outputs": [],
@@ -497,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "8c2b4013-7de0-4ec4-9a00-e5d5519a005a",
    "metadata": {},
    "outputs": [
@@ -517,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 30,
    "id": "00e83a5e-26ec-485c-acde-b53541d38a4d",
    "metadata": {},
    "outputs": [
@@ -527,7 +531,7 @@
        "101"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,12 +545,12 @@
    "id": "23ada5a3-7261-4d56-a6e6-2871a2b055d5",
    "metadata": {},
    "source": [
-    "## 3.2 Drucken Sie ein Liste der kumulative Summe aus."
+    "### 3.2 Drucken Sie ein Liste der kumulative Summe aus."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "13851071-2584-4f1b-9ae3-7820cbc3a64e",
    "metadata": {},
    "outputs": [
@@ -572,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "aeedb6cd-6005-4435-b186-86a5b79a361d",
    "metadata": {},
    "outputs": [
@@ -590,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "d4987c5f-6717-40f1-8a53-fef9c685d81d",
    "metadata": {},
    "outputs": [],
@@ -606,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "8bfcc44d-4e92-4127-b4da-8ca01f27ff58",
    "metadata": {},
    "outputs": [
@@ -624,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "8b3f6152-993b-4fe8-bbca-113c698516ee",
    "metadata": {},
    "outputs": [],
@@ -640,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "1b68cab0-ccdd-4b62-91a1-0ab0bc952108",
    "metadata": {},
    "outputs": [
@@ -658,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "7dcfe6ee",
    "metadata": {},
    "outputs": [],
@@ -668,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "id": "5199682e",
    "metadata": {},
    "outputs": [
@@ -678,7 +682,7 @@
        "'Katze'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "70ffc33e",
    "metadata": {},
    "outputs": [
@@ -699,7 +703,7 @@
        "['Hund', 'Vogel']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "70f9bd36-9f65-4704-bcdc-55ab147870fa",
    "metadata": {},
    "outputs": [],
@@ -725,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "66660b88-073f-4bc8-bd43-a223d1935b99",
    "metadata": {},
    "outputs": [
@@ -746,7 +750,7 @@
    "id": "56d57da6-97b4-42b0-b26d-74272ff3da7f",
    "metadata": {},
    "source": [
-    "# Aufgabe 4"
+    "## Aufgabe 4"
    ]
   },
   {
@@ -754,7 +758,7 @@
    "id": "86b80620-4b8b-4a23-bdb6-b5184858103f",
    "metadata": {},
    "source": [
-    "## 4.1 Initialisieren Sie eine Liste von Dict mit 10 Leute: Name, Age und Haustier (Hund oder Katze)"
+    "### 4.1 Initialisieren Sie eine Liste von Dict mit 10 Leute: Name, Age und Haustier (Hund oder Katze)"
    ]
   },
   {
@@ -770,17 +774,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "2101e470-710c-4e5e-bdff-dfae8644021e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Tim', 'Nina', 'Sara', 'Alexander', 'Katja']"
+       "['Tim', 'Nina', 'Sara', 'Alexander', 'Katja', 'John']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "c50c3d5d-e82c-4b0d-a222-05ac6ee7b490",
    "metadata": {},
    "outputs": [],
@@ -801,17 +805,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "ea4b93b6-d28b-447a-a439-2714886ba43d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Tim', 'Nina', 'Sara', 'Alexander', 'Katja', 'Jose', 'Mei', 'Thor', 'Mary']"
+       "['Tim',\n",
+       " 'Nina',\n",
+       " 'Sara',\n",
+       " 'Alexander',\n",
+       " 'Katja',\n",
+       " 'John',\n",
+       " 'Jose',\n",
+       " 'Mei',\n",
+       " 'Thor',\n",
+       " 'Mary']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "066b5133-8ae0-43db-a7a0-b8e7ab99a1d8",
    "metadata": {},
    "outputs": [],
@@ -832,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "16778169-1241-41c7-838c-115996424e2f",
    "metadata": {},
    "outputs": [],
@@ -863,6 +876,7 @@
       "dict_keys(['name', 'alter', 'haustier']) dict_values(['Sara', 20, 'Hund'])\n",
       "dict_keys(['name', 'alter', 'haustier']) dict_values(['Alexander', 45, 'Hund'])\n",
       "dict_keys(['name', 'alter', 'haustier']) dict_values(['Katja', 25, 'Hund'])\n",
+      "dict_keys(['name', 'alter', 'haustier']) dict_values(['John', 20, 'Katze'])\n",
       "dict_keys(['name', 'alter', 'haustier']) dict_values(['Jose', 20, 'Katze'])\n",
       "dict_keys(['name', 'alter', 'haustier']) dict_values(['Mei', 15, 'Katze'])\n",
       "dict_keys(['name', 'alter', 'haustier']) dict_values(['Thor', 20, 'Katze'])\n",
@@ -890,6 +904,7 @@
       "Sara ist 20 Jahre alt und hat einen Hund.\n",
       "Alexander ist 45 Jahre alt und hat einen Hund.\n",
       "Katja ist 25 Jahre alt und hat einen Hund.\n",
+      "John ist 20 Jahre alt und hat eine Katze.\n",
       "Jose ist 20 Jahre alt und hat eine Katze.\n",
       "Mei ist 15 Jahre alt und hat eine Katze.\n",
       "Thor ist 20 Jahre alt und hat eine Katze.\n",
@@ -909,7 +924,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "datasci",
    "language": "python",
    "name": "python3"
   },
