--- a/2-Grundlegend/Aufgaben/2.3-aufgaben.ipynb
+++ b/2-Grundlegend/Aufgaben/2.3-aufgaben.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# 2.3 Aufgaben\n",
     "Diese Aufgaben sind länger als Lernzielkontrolle und fassen alle Themen aus 2.3 zusammen.\n",
-    "Lösen Sie diese Aufgabe in VS Code oder in Jupyter Notebook."
+    "\n",
+    "Lösen Sie diese Aufgaben in VS Code oder in Jupyter Notebook."
    ]
   },
   {
