update task 4.1 instructions

--- a/4-Wichtige-Libraries/Aufgaben/4.1-aufgaben.ipynb
+++ b/4-Wichtige-Libraries/Aufgaben/4.1-aufgaben.ipynb
@@ -8,22 +8,16 @@
     "\n",
     "Diese Aufgabe ist länger als Lernzielkontrolle und fasst alle Themen aus 4.1 and früher zusammen.\n",
     "\n",
+    "1. Bitte verbessern Sie die folgenden Funktionen mit NumPy ohne numpy.cov(). \n",
+    "2. Messen Sie, welche Funktion schneller ist: kov_mat(), np_kov_mat() oder numpy.cov().\n",
+    "3. Die Zufallsvariablen sind auf der Grundgesamtheit und keine Stichprobe.\n",
+    "\n",
     "> Bitte benutzen Sie NumPy.\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.1.1\n",
-    "\n",
-    "1. Bitte verbessern Sie die Funktionen mit NumPy ohne np.cov(). \n",
-    "2. Messen Sie welche Funktion ist schneller."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def kov_mat(*args):\n",
     "    # Liste-Comprehension um einzigarg Liste zu erzeugen\n",
     "    # [0] * 2 ist zweimal die gleiche Liste\n",
-    "    temp = [ [ 0 for _ in range(0,len(args)) ] for _ in range(0,len(args))]\n",
+    "    temp = [ [ 0 for _ in range(0,len(args)) ] for _ in range(0, len(args))]\n",
     "    \n",
     "    for i in range(0,len(args)):\n",
     "\n",
@@ -60,6 +54,33 @@
     "\n",
     "    return temp"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def np_kov():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def np_kov_mat():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
