--- a/4-Wichtige-Libraries/Aufgaben/4.2-aufgaben.ipynb
+++ b/4-Wichtige-Libraries/Aufgaben/4.2-aufgaben.ipynb
@@ -17,7 +17,7 @@
     "4. [Firma](https://github.com/prasertcbs/basic-dataset/blob/master/companies.csv)\n",
     "5. Alter - zufällig (18 - 65)\n",
     "6. Gehalt - auf Alter basiert\n",
-    "7. Email - auf Name and Job basiert\n",
+    "7. Email - auf Name und Firma basiert\n",
     "8. Geburtstag - auf Alter und heutiges Datum basiert\n",
     "\n",
     "\n",
