update task 4.1 alter instruction

--- a/4-Wichtige-Libraries/Aufgaben/4.2-aufgaben.ipynb
+++ b/4-Wichtige-Libraries/Aufgaben/4.2-aufgaben.ipynb
@@ -16,7 +16,7 @@
     "3. [Job](https://github.com/johnlsheridan/occupations/blob/master/occupations.csv)\n",
     "4. [Firma](https://github.com/prasertcbs/basic-dataset/blob/master/companies.csv)\n",
     "5. Alter - zufällig (18 - 65)\n",
-    "6. Gehalt - auf Alter basiert\n",
+    "6. Gehalt - zufällig plus auf Alter basiert\n",
     "7. Email - auf Name und Firma basiert\n",
     "8. Geburtstag - auf Alter und heutiges Datum basiert\n",
     "\n",
