--- a/4-Wichtige-Libraries/Aufgaben/4.2-aufgaben.ipynb
+++ b/4-Wichtige-Libraries/Aufgaben/4.2-aufgaben.ipynb
@@ -18,7 +18,7 @@
     "5. Alter - zufällig (18 - 65)\n",
     "6. Gehalt - zufällig plus auf Alter basiert\n",
     "7. Email - auf Name und Firma basiert\n",
-    "8. Geburtstag - auf Alter und heutiges Datum basiert\n",
+    "8. Geburtsjahr  - auf Alter und heutiges Jahr basiert\n",
     "\n",
     "\n",
     "Sie müssen die Daten für Spalten 1-4 herunterladen. Spalten 5-8 wird entweder erzeugt oder von anderen Daten herausgekommen.\n",
