--- a/test.ipynb
+++ b/test.ipynb
@@ -599,10 +599,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.5, 0.5])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Methode der kleinsten Quadrate\n",
+    "from sklearn import linear_model\n",
+    "reg = linear_model.LinearRegression()\n",
+    "reg.fit([[0, 0], [1, 1], [2, 2]], [0, 1, 2])\n",
+    "reg.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\pat_h\\\\OneDrive\\\\p-spohr-repos\\\\HTW-Berlin-Pytorium'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pat_h\\OneDrive\\p-spohr-repos\\HTW-Berlin-Pytorium\\2-Grundlegend\n",
+      "C:\\Users\\pat_h\\OneDrive\\p-spohr-repos\\HTW-Berlin-Pytorium\\2-Grundlegend\\2.1-Rechner-und-Speicher\n",
+      "2.1.1-arithmetische-operatoren.py\n",
+      "2.1.2-datentypen.py\n",
+      "2.1.3-datenstrukturen.py\n",
+      "C:\\Users\\pat_h\\OneDrive\\p-spohr-repos\\HTW-Berlin-Pytorium\\2-Grundlegend\\2.2-Kontrollfluss\n",
+      "2.2.1-if-bedingung.py\n",
+      "2.2.2-for-schleife.py\n",
+      "2.2.3-while-schleife.py\n",
+      "2.2.4-match-fallunterscheidung.py\n",
+      "C:\\Users\\pat_h\\OneDrive\\p-spohr-repos\\HTW-Berlin-Pytorium\\2-Grundlegend\\2.3-Funktionen\n",
+      "2.3.1-built-in-funktionen.py\n",
+      "2.3.2-benutzerdefinierte-funktionen.py\n",
+      "2.3.3-anonyme-lambda-funktionen.py\n",
+      "2.3.4-decorators.py\n",
+      "C:\\Users\\pat_h\\OneDrive\\p-spohr-repos\\HTW-Berlin-Pytorium\\2-Grundlegend\\Aufgaben\n",
+      "2.1-2.2-aufgaben-lösungen.ipynb\n",
+      "2.1-2.2-aufgaben-lösungen.py\n",
+      "2.1-2.2-aufgaben.py\n",
+      "2.3-aufgaben-lösungen.ipynb\n",
+      "2.3-aufgaben.ipynb\n",
+      "2.3-aufgaben.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dirpath, dirnames, filenames in os.walk('C:\\\\Users\\\\pat_h\\\\OneDrive\\\\p-spohr-repos\\\\HTW-Berlin-Pytorium\\\\2-Grundlegend'):\n",
+    "    print(dirpath)\n",
+    "    for file in filenames:\n",
+    "        print(file)"
+   ]
   }
  ],
  "metadata": {
