--- a/4-Wichtige-Libraries/4.2-pandas-bigmac.ipynb
+++ b/4-Wichtige-Libraries/4.2-pandas-bigmac.ipynb
@@ -2890,7 +2890,7 @@
     }
    ],
    "source": [
-    "daten[daten['Land'] == 'China'].groupby(pd.Grouper(freq='YE'))['Preis'].mean().plot(xlabel='Datum', ylabel='RMB', title='China Big Mac Preise')"
+    "daten[daten['Land'] == 'ma'].groupby(pd.Grouper(freq='YE'))['Preis'].mean().plot(xlabel='Datum', ylabel='RMB', title='China Big Mac Preise')"
    ]
   },
   {
