--- a/widgets_test.ipynb
+++ b/widgets_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd28cc9cb1004342b87d9c67dde1e3fb",
+       "model_id": "1d43819399314c09b57bbc0ce10327a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "100"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,13 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb379c22528c4a288b0a4c179215b932",
+       "model_id": "49c80937fee14a719dd69f659c2044fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,21 +83,40 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f26ff0c86af4846a92c8084f5ff3c79",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "output_button = widgets.Output()\n",
+    "\n",
     "def hi(button):\n",
-    "    print('Hello there!')\n",
-    "    print(f'The int value is {choose_int.value}')\n",
+    "    with output_button:\n",
+    "        print('Hello there!')\n",
+    "        print(f'The int value is {choose_int.value}')\n",
     "button = widgets.Button(description='Hello!')\n",
+    "\n",
     "button.on_click(hi)\n",
     "\n",
-    "display(button)"
+    "display(button)\n",
+    "display(output_button)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a1a0e8ebb0241c38b87f823f3f08d37",
+       "model_id": "b21d3287b3f2434cbc7286aec2ce4428",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "2024-12-16\n"
      ]
     }
    ],
@@ -150,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,13 +185,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9be0e3c9cf8a4a699abc9aa902e8eb33",
+       "model_id": "8b04ca295594481cb020a449b4d9c292",
        "version_major": 2,
        "version_minor": 0
       },
@@ -190,13 +209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e817055b78554382a4863b6d8de5e251",
+       "model_id": "a7c7b3853d67407cbfd4e5df0493c4d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -210,7 +229,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "837f287f89cb4ccfae4ea061a661a51a",
+       "model_id": "bbd0f59a84fc4899b42c12477066a92b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,7 +243,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f43c732d6a3b444cabc62f827f7a8c84",
+       "model_id": "b84ef0f00fc0471fa609845215ce7b2e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -284,17 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({'output_type': 'stream', 'name': 'stdout', 'text': ''},\n",
-       " {'output_type': 'stream', 'name': 'stdout', 'text': '5152530'})"
+       "({'output_type': 'stream',\n",
+       "  'name': 'stdout',\n",
+       "  'text': '51-52-53-54-55-56-57-58-59-60-61-62-63-64-0-1-2-3-4-5-6-7-8-9-10-11-12-0'},)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,13 +325,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4b6011d74af406f918ee4242c2a2c63",
+       "model_id": "a7c7b3853d67407cbfd4e5df0493c4d1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Clear Output', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a5e8b3c5c7d04ead944d92304bd664ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b68a09d9793543fc85846b6f31a39415",
+       "model_id": "f1b63f41c2a54e4c85448d7d1641eb86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -341,13 +375,18 @@
     "int_range = widgets.IntSlider()\n",
     "output2 = widgets.Output()\n",
     "\n",
+    "display(clear_output)\n",
     "display(int_range, output2)\n",
     "\n",
     "def on_value_change(change):\n",
     "    with output2:\n",
     "        print(change.new)\n",
     "\n",
-    "int_range.observe(on_value_change, names='value')"
+    "def clear(change):\n",
+    "    output2.clear_output()\n",
+    "\n",
+    "clear_output.on_click(clear)\n",
+    "int_range.observe(on_value_change, names='value')\n"
    ]
   },
   {
@@ -395,7 +434,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datasci",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
