--- a/5-Präsentationen/Beispiele/widgets-beispiele.ipynb
+++ b/5-Präsentationen/Beispiele/widgets-beispiele.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ipywidgets\n",
+    "ipywidgets von Jupyter ermöglicht interaktive Optionen ohne weitere Programmierung. Diese Bibliothek funktioniert am Besten mit Jupyter auf den Browser, weil VS Code alle Widgets nicht rendern kann.\n",
+    "\n",
+    "Aktivieren Sie die venv mit Jupyter installiert (ipywidgets ist schon drin) und rufen Sie notebook in gewünschtem Ordner auf.\n",
+    "\n",
+    "Befehl\n",
+    "```PowerShell\n",
+    "jupyter notebook\n",
+    "```\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -426,6 +441,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rng = np.random.default_rng()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.66363501,  0.66363501],\n",
+       "       [ 0.34845762,  0.34845761],\n",
+       "       [-0.00867683, -0.00867683],\n",
+       "       [ 0.01911473,  0.01911472],\n",
+       "       [-0.28919251, -0.28919251],\n",
+       "       [-0.10418313, -0.10418312],\n",
+       "       [ 0.72147429,  0.72147429],\n",
+       "       [-0.83359628, -0.83359629],\n",
+       "       [ 0.37355211,  0.3735521 ],\n",
+       "       [ 1.6585719 ,  1.65857191]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng.multivariate_normal([0,0], [[1,1],[1,1]], size=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -434,7 +496,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datasci",
    "language": "python",
    "name": "python3"
   },
